// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Treeview stateful 1`] = `
Array [
  .emotion-0 {
  height: 24px;
  box-sizing: border-box;
  width: 100%;
  background: transparent;
  border: 0 none;
  color: #444;
  padding: 10px;
  padding-left: 0;
  border-bottom: 1px solid rgba(0,0,0,0.05);
}

.emotion-0:focus {
  outline: 0;
  border-bottom: 1px solid #9fdaff;
}

<input
    class="emotion-0"
    id="storybook-explorer-searchfield"
    placeholder="Press \\"/\\" to search..."
  />,
  .emotion-0 {
  fill: currentColor;
}

.emotion-14 {
  margin-left: -20px;
  margin-right: -20px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  background: transparent;
}

.emotion-1 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
}

.emotion-3 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #774dd7;
}

<div
    class="emotion-14"
  >
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="#!1"
        id="stateful_1"
      >
        <div
          class="emotion-4"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent A
          </span>
        </div>
      </a>
    </div>
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="#!2"
        id="stateful_2"
      >
        <div
          class="emotion-4"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent B
          </span>
        </div>
      </a>
    </div>
  </div>,
]
`;

exports[`Storyshots Components|Treeview stateless 1`] = `
.emotion-0 {
  fill: currentColor;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  background: transparent;
}

.emotion-11 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
}

.emotion-3 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #774dd7;
}

.emotion-1 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
  -webkit-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

.emotion-8 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 30px;
  background: transparent;
}

.emotion-7 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #37d5d3;
}

<div
  class="emotion-16"
>
  <a
    class="emotion-5"
    href="#!1"
    id="stateless_1"
  >
    <div
      class="emotion-4"
    >
      <svg
        class="emotion-1"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="emotion-0"
          d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
        />
      </svg>
      <svg
        class="emotion-3"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="emotion-0"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Parent A
      </span>
    </div>
  </a>
  <div
    class="emotion-16"
  >
    <a
      class="emotion-5"
      href="#!1-11"
      id="stateless_1-11"
    >
      <div
        class="emotion-8"
        id="1-11"
      >
        <svg
          class="emotion-7"
          height="14px"
          viewBox="0 0 1024 1024"
          width="14px"
        >
          <path
            class="emotion-0"
            d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
          />
        </svg>
        Child A1
      </div>
    </a>
    <div
      class="emotion-16"
    >
      <a
        class="emotion-5"
        href="#!1-12"
        id="stateless_1-12"
      >
        <div
          class="emotion-8"
        >
          <svg
            class="emotion-11"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Treeview stateless changed expanded 1`] = `
.emotion-0 {
  fill: currentColor;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  background: transparent;
}

.emotion-3 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #774dd7;
}

.emotion-1 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
  -webkit-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

.emotion-8 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 30px;
  background: transparent;
}

.emotion-7 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #37d5d3;
}

.emotion-18 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 50px;
  background: transparent;
}

<div
  class="emotion-24"
>
  <a
    class="emotion-5"
    href="#!1"
    id="stateless_1"
  >
    <div
      class="emotion-4"
    >
      <svg
        class="emotion-1"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="emotion-0"
          d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
        />
      </svg>
      <svg
        class="emotion-3"
        height="14px"
        viewBox="0 0 1024 1024"
        width="14px"
      >
        <path
          class="emotion-0"
          d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
        />
      </svg>
      <span>
        Parent A
      </span>
    </div>
  </a>
  <div
    class="emotion-24"
  >
    <a
      class="emotion-5"
      href="#!1-11"
      id="stateless_1-11"
    >
      <div
        class="emotion-8"
        id="1-11"
      >
        <svg
          class="emotion-7"
          height="14px"
          viewBox="0 0 1024 1024"
          width="14px"
        >
          <path
            class="emotion-0"
            d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
          />
        </svg>
        Child A1
      </div>
    </a>
    <div
      class="emotion-24"
    >
      <a
        class="emotion-5"
        href="#!1-12"
        id="stateless_1-12"
      >
        <div
          class="emotion-8"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
      <div
        class="emotion-24"
      >
        <a
          class="emotion-5"
          href="#!1-12-121"
          id="stateless_1-12-121"
        >
          <div
            class="emotion-18"
            id="1-12-121"
          >
            <svg
              class="emotion-7"
              height="14px"
              viewBox="0 0 1024 1024"
              width="14px"
            >
              <path
                class="emotion-0"
                d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
              />
            </svg>
            GrandChild A1.1
          </div>
        </a>
        <a
          class="emotion-5"
          href="#!1-12-122"
          id="stateless_1-12-122"
        >
          <div
            class="emotion-18"
            id="1-12-122"
          >
            <svg
              class="emotion-7"
              height="14px"
              viewBox="0 0 1024 1024"
              width="14px"
            >
              <path
                class="emotion-0"
                d="M772 1012L511 761l-260 251a49 49 0 0 1-52 10c-18-7-29-24-29-43V132c0-25 21-46 47-46h588c26 0 47 21 47 46v847c0 19-11 36-29 43a49 49 0 0 1-51-10zM545 664l213 205V181H265v688l213-205c9-9 21-14 33-14s24 5 34 14z"
              />
            </svg>
            GrandChild A1.2
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Treeview with custom node 1`] = `
Array [
  .emotion-0 {
  height: 24px;
  box-sizing: border-box;
  width: 100%;
  background: transparent;
  border: 0 none;
  color: #444;
  padding: 10px;
  padding-left: 0;
  border-bottom: 1px solid rgba(0,0,0,0.05);
}

.emotion-0:focus {
  outline: 0;
  border-bottom: 1px solid #9fdaff;
}

<input
    class="emotion-0"
    id="storybook-explorer-searchfield"
    placeholder="Press \\"/\\" to search..."
  />,
  .emotion-0 {
  fill: currentColor;
}

.emotion-14 {
  margin-left: -20px;
  margin-right: -20px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  background: transparent;
}

.emotion-1 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
}

.emotion-3 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #774dd7;
}

<div
    class="emotion-14"
  >
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="#!1"
        id="stateful_1"
      >
        <div
          class="emotion-4"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent A
          </span>
        </div>
      </a>
    </div>
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="#!2"
        id="stateful_2"
      >
        <div
          class="emotion-4"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Parent B
          </span>
        </div>
      </a>
    </div>
  </div>,
]
`;

exports[`Storyshots Components|Treeview with roots node 1`] = `
Array [
  .emotion-0 {
  height: 24px;
  box-sizing: border-box;
  width: 100%;
  background: transparent;
  border: 0 none;
  color: #444;
  padding: 10px;
  padding-left: 0;
  border-bottom: 1px solid rgba(0,0,0,0.05);
}

.emotion-0:focus {
  outline: 0;
  border-bottom: 1px solid #9fdaff;
}

<input
    class="emotion-0"
    id="storybook-explorer-searchfield"
    placeholder="Press \\"/\\" to search..."
  />,
  .emotion-1 {
  margin-top: 20px;
  margin-bottom: 10px;
}

.emotion-0 {
  color: currentColor;
  font-weight: normal;
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-letter-spacing: 4.3px;
  -moz-letter-spacing: 4.3px;
  -ms-letter-spacing: 4.3px;
  letter-spacing: 4.3px;
  font-weight: 400;
  font-size: 10px;
  text-transform: uppercase;
}

.emotion-0 > sub {
  display: block;
  padding-top: 5px;
  line-height: 1.2em;
  font-size: 14px;
}

<header
    class="emotion-1"
  >
    <h1
      class="emotion-0"
    >
      <span>
        Root 1
      </span>
    </h1>
  </header>,
  .emotion-0 {
  fill: currentColor;
}

.emotion-7 {
  margin-left: -20px;
  margin-right: -20px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  background: transparent;
}

.emotion-1 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
}

.emotion-3 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #774dd7;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="#!1-12"
        id="stateful_1-12"
      >
        <div
          class="emotion-4"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
    </div>
  </div>,
  .emotion-1 {
  margin-top: 20px;
  margin-bottom: 10px;
}

.emotion-0 {
  color: currentColor;
  font-weight: normal;
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-letter-spacing: 4.3px;
  -moz-letter-spacing: 4.3px;
  -ms-letter-spacing: 4.3px;
  letter-spacing: 4.3px;
  font-weight: 400;
  font-size: 10px;
  text-transform: uppercase;
}

.emotion-0 > sub {
  display: block;
  padding-top: 5px;
  line-height: 1.2em;
  font-size: 14px;
}

<header
    class="emotion-1"
  >
    <h1
      class="emotion-0"
    >
      <span>
        Root 3
      </span>
    </h1>
  </header>,
  .emotion-0 {
  fill: currentColor;
}

.emotion-7 {
  margin-left: -20px;
  margin-right: -20px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  background: transparent;
}

.emotion-1 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
}

.emotion-3 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #774dd7;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="#!3-32"
        id="stateful_3-32"
      >
        <div
          class="emotion-4"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Child A2
          </span>
        </div>
      </a>
    </div>
  </div>,
  .emotion-1 {
  margin-top: 20px;
  margin-bottom: 10px;
}

.emotion-0 {
  color: currentColor;
  font-weight: normal;
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.2em;
  display: block;
  color: rgba(0,0,0,0.4);
  -webkit-letter-spacing: 4.3px;
  -moz-letter-spacing: 4.3px;
  -ms-letter-spacing: 4.3px;
  letter-spacing: 4.3px;
  font-weight: 400;
  font-size: 10px;
  text-transform: uppercase;
}

.emotion-0 > sub {
  display: block;
  padding-top: 5px;
  line-height: 1.2em;
  font-size: 14px;
}

<header
    class="emotion-1"
  >
    <h1
      class="emotion-0"
    >
      <span>
        Others
      </span>
    </h1>
  </header>,
  .emotion-0 {
  fill: currentColor;
}

.emotion-7 {
  margin-left: -20px;
  margin-right: -20px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  min-height: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 10px;
  background: transparent;
}

.emotion-1 {
  display: block;
  display: inline-block;
  width: 8px;
  height: 8px;
  margin: 1px;
  margin-right: 4px;
  margin-left: -2px;
  -webkit-transition: -webkit-transform .1s linear;
  -webkit-transition: transform .1s linear;
  transition: transform .1s linear;
  color: rgba(0,0,0,0.4);
}

.emotion-3 {
  display: block;
  display: inline-block;
  width: 10px;
  height: 10px;
  margin-right: 10px;
  color: #774dd7;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="#!2"
        id="stateful_2"
      >
        <div
          class="emotion-4"
        >
          <svg
            class="emotion-1"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M878.78 477.856l-591.884-341.722c-9.464-5.464-18.426-8.050-26.386-8.048-19.516 0.002-33.002 15.546-33.002 42.338v683.446c0 26.792 13.482 42.338 33.002 42.338 7.96 0 16.924-2.586 26.386-8.048l591.884-341.722c32.664-18.864 32.664-49.724 0-68.582z"
            />
          </svg>
          <svg
            class="emotion-3"
            height="14px"
            viewBox="0 0 1024 1024"
            width="14px"
          >
            <path
              class="emotion-0"
              d="M571 274h327c23 0 41 18 41 41v488c0 22-18 40-41 40H126c-23 0-41-18-41-40V242c0-34 27-61 61-61h317c18 0 35 7 47 21l61 72zm-119-8H170v492h684V359H531l-79-93z"
            />
          </svg>
          <span>
            Group 1
          </span>
        </div>
      </a>
    </div>
  </div>,
]
`;
